--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cuidado-seniors-back",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "",
   "author": "Tamara Rivas",
   "private": true,
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "axios": "^1.5.0",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "joi": "^17.10.1",
